src/meshlink/h/MeshAssociativity_c.h

/**
 * \brief Allocates a new MeshAssociativity Object.
 * @param[in,out] meshAssocObj MeshAssociativity object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_createMeshAssociativityObj( MeshAssociativityObj *meshAssocObj ) ;
/**
 * \brief Frees a MeshAssociativity Object.
 * @param[in,out] meshAssocObj MeshAssociativity object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
void   ML_freeMeshAssociativityObj(MeshAssociativityObj *meshAssocObj) ;
/**
 * \brief Validate a MeshLink XML file against the schema.
 * @param[in] parseObj MeshLinkParser object
 * @param[in] meshlinkFilename meshlink filename
 * @param[in] schemaFilename schema filename
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS   ML_parserValidateFile(
        MeshLinkParserObj parseObj,
        const char *meshlinkFilename,
        const char *schemaFilename);
/**
 * \brief Read a MeshLink XML file into a MeshAssociativity object.
 * @param[in] parseObj MeshLinkParser object
 * @param[in] meshlinkFilename meshlink filename
 * @param[in,out] meshAssocObj MeshAssociativity object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS    ML_parserReadMeshLinkFile(
        MeshLinkParserObj parseObj,
        const char *meshlinkFilename,
        MeshAssociativityObj meshAssocObj);
/**
 * \brief Get MeshModel object by name.
 * @param[in] meshAssocObj MeshAssociativity object
 * @param[in] modelname Mesh Model name
 * @param[out] meshModel MeshModel object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getMeshModelByName(MeshAssociativityObj meshAssocObj, 
    const char *modelname, MeshModelObj *meshModel);
/**
 * \brief Add GeometryKernel object to MeshAssociativity.
 * @param[in,out] meshAssocObj MeshAssociativity object
 * @param[in]     geomKernelObj GeometryKernel object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_addGeometryKernel(MeshAssociativityObj meshAssocObj, GeometryKernelObj geomKernelObj);
/**
 * \brief Set MeshAssociativity active Geometry Kernel by name.
 * @param[in,out] meshAssocObj MeshAssociativity object
 * @param[in] kernelname Geometry Kernel name
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_setActiveGeometryKernelByName(MeshAssociativityObj meshAssocObj, const char *kernelname);
/**
 * \brief Get MeshAssociativity active Geometry Kernel object.
 * @param[in] meshAssocObj MeshAssociativity object
 * @param[out] geomKernelObj GeometryKernel object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getActiveGeometryKernel(
        MeshAssociativityObj meshAssocObj,
        GeometryKernelObj *geomKernelObj);
/**
 * \brief Get number of geometry files referenced by the MeshAssociativity.
 * @param[in] meshAssocObj MeshAssociativity object
 * \returns File count
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLINT ML_getNumGeometryFiles(MeshAssociativityObj meshAssocObj);
/**
 * \brief Get GeometryFile refereneced in MeshAssociativity by index.
 * @param[in] meshAssocObj MeshAssociativity object
 * @param[in] index geometry file index
 * @param[out] fileObj GeometryFile object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getGeometryFileObj(MeshAssociativityObj meshAssocObj,
    MLINT index,
    MeshLinkFileConstObj *fileObj);
/**
 * \brief Get file name for a generic MeshLinkFile.
 * @param[in] fileObj MeshLinkFile object (could be GeometryFile or MeshFile)
 * @param[in,out] filenameBuf file name buffer
 * @param[in] filenameBufLen file name buffer length
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getFilename( MeshLinkFileConstObj fileObj, char *filenameBuf, MLINT filenameBufLen );
/**
 * \brief Set the model size attribute in the GeometryKernel.
 * Model size (extents) is used to define tolerances related to model closure, e.g. same point tolerance.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in] modelSize model size
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_setGeomModelSize(
    GeometryKernelObj geomKernelObj,
    MLREAL modelSize);
/**
 * \brief Get the model size attribute in the GeometryKernel.
 * Model size is used to define tolerances related to model closure, e.g. same point tolerance.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[out] modelSize model size
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getGeomModelSize(
    GeometryKernelObj geomKernelObj,
    MLREAL *modelSize);
/**
 * \brief Read a GeometryFile into the GeometryKernel.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in] geomFilename geometry file name
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_readGeomFile(
        GeometryKernelObj geomKernelObj,
        const char *geomFilename);
/**
 * \brief Get array of attribute IDs for a generic MeshLinkFile.
 * @param[in] meshAssocObj MeshAssociativity object 
 * @param[in] fileObj MeshLinkFile object (could be GeometryFile or MeshFile)
 * @param[in,out] attIDs attribute ID array
 * @param[in] sizeAttIDs attribute ID array size
 * @param[out] numAttIDs attribute ID count
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getFileAttIDs(MeshAssociativityObj meshAssocObj,
        MeshLinkFileConstObj fileObj,
        MLINT attIDs[],
        MLINT sizeAttIDs,
        MLINT *numAttIDs  );
/**
 * \brief Get attribute name-value pair by ID.
 * @param[in] meshAssocObj MeshAssociativity object
 * @param[in] attID attribute ID
 * @param[in,out] attNameBuf attribute name buffer
 * @param[in,out] attNameBufLen attribute name buffer length
 * @param[in,out] attValueBuf attribute value buffer
 * @param[in,out] attValueBufLen attribute value buffer length
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getAttribute(MeshAssociativityObj meshAssocObj,
        MLINT attID,
        char *attNameBuf, MLINT attNameBufLen,
        char *attValueBuf, MLINT attValueBufLen
    );
/**
 * \brief Find a point index's lowest topological reference.
 * Returns first usage in the order MeshString, MeshSheet, MeshModel.
 * @param[in] meshModelObj MeshModel object
 * @param[in] pointIndex Point index
 * @param[out] meshPointObj MeshPoint object
 * \returns ML_STATUS_OK if found
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_findLowestTopoPointByInd(MeshModelObj meshModelObj,
        MLINT pointIndex, MeshPointObj* meshPointObj);
/**
 * \brief Return array of Parametric Vertices for a MeshTopo object.
 * MeshTopo object may be any MeshTopo derived object, e.g. MeshSheet, MeshFace.
 * @param[in] meshTopoObj MeshTopo object
 * @param[in,out] pvObjsArr ParamVertex array 
 * @param[in] pvObjsArrLen ParamVertex array size
 * @param[out] num_pvObjs ParamVertex count
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getParamVerts(MeshTopoConstObj meshTopoObj,
        ParamVertexConstObj pvObjsArr[],  /* array of ParamVertexConstObj */
        MLINT pvObjsArrLen,               /* length of array */
        MLINT *num_pvObjs );
/**
 * \brief Get Parametric Vertex information.
 * @param[in] pvObj ParamVertex object
 * @param[in,out] vrefBuf MeshPoint reference buffer
 * @param[in] vrefBufLen MeshPoint reference buffer size
 * @param[out] gref GeometryGroup ID
 * @param[out] mid ID
 * @param[out] UV Parametric coordinates in GeometryGroup entity
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getParamVertInfo(ParamVertexConstObj pvObj,
        char *vrefBuf, MLINT vrefBufLen,
        MLINT *gref,
        MLINT *mid,
        MLVector2D UV);
/**
 * \brief Get GeometryGroup by ID.
 * @param[in] meshAssocObj MeshAssociativity object
 * @param[in] gid Geometry Group ID
 * @param[out] geomGroupObj GeometryGroup object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getGeometryGroupByID(
        MeshAssociativityObj meshAssocObj,
        MLINT gid,
        GeometryGroupObj *geomGroupObj
    );
/**
 * \brief Get array of entity names referenced by GeometryGroup.
 * @param[in] geomGroupObj GeometryGroup object
 * @param[in,out] entityNamesBufArr entity name buffer array
 * @param[in]  entityNamesArrLen entity name buffer array size
 * @param[in]  entityNameBufLen entity name buffer length
 * @param[out] num_entityNames entity name count
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getEntityNames(
        GeometryGroupObj geomGroupObj,
        char *entityNamesBufArr,      /* array of entity name buffers */
        MLINT entityNamesArrLen,   /* length of names array */
        MLINT entityNameBufLen,    /* buffer length of a each name */
        MLINT *num_entityNames
    );
/**
 * \brief Evaluate XYZ at parametric coordinates on geometric entity.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in] UV            2D parametric coordinates (2nd coord unused for 1D entities)
 * @param[in] entityName    entity name
 * @param[out] XYZ          location
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_evalXYZ(
    GeometryKernelObj geomKernelObj,
    MLVector2D UV,
    const char *entityName,
    MLVector3D XYZ);
/**
 * \brief Evaluate radius of curvature at parametric coordinates on geometric entity.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in] UV 2D parametric coordinates (2nd coord unused for 1D entities)
 * @param[in] entityName entity name
 * @param[out] minRradOfCurvature minimum radius of curvature
 * @param[out] maxRradOfCurvature maximum radius of curvature
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_evalRadiusOfCurvature(
        GeometryKernelObj geomKernelObj,
        MLVector2D UV,
        const char *entityName,
        MLREAL *minRradOfCurvature,
        MLREAL *maxRradOfCurvature);
/**
 * \brief Allocates a new GeometryKernel-specific ProjectionData Object.
 * A ProjectionData object is used to store inverse evaluation data 
 * specific to the GeometryKernel.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in,out] projectionDataObj ProjectionData object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_createProjectionDataObj(
        GeometryKernelObj geomKernelObj,
        ProjectionDataObj *projectionDataObj
    );
/**
 * \brief Frees a  GeometryKernel-specific ProjectionData Object.
 * @param[in,out] projectionDataObj ProjectionData object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
    void ML_freeProjectionDataObj(ProjectionDataObj *projectionDataObj);
/**
 * \brief Closest point projection onto a GeometryGroup.
 * A ProjectionData object is used to store inverse evaluation data
 * specific to the GeometryKernel.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in] geomGroupObj GeometryGroup object
 * @param[in] point XYZ location
 * @param[in,out] projectionDataObj ProjectionData object
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_projectPoint(
    GeometryKernelObj geomKernelObj,
    GeometryGroupObj geomGroupObj,
    MLVector3D point,
    ProjectionDataObj projectionDataObj
);
/**
 * \brief Get info from closest point projection onto a GeometryGroup
 * stored in a ProjectionData object specific to the GeometryKernel.
 * @param[in] geomKernelObj GeometryKernel object
 * @param[in] projectionDataObj ProjectionData object
 * @param[out] xyz location
 * @param[out] UV parametric coordinates
 * @param[in,out] entityNameBuf geoemtry entity name buffer
 * @param[in] entityNameBufLen  geoemtry entity name buffer length
 * @param[out] distance the distance between the original point and projected point (can be NULL)
 * @param[out] tolerance the error tolerance of the projection result (can be NULL)
 * \returns ML_STATUS_OK / ML_STATUS_ERROR
 */
/** @cond */ ML_EXTERN ML_STORAGE_CLASS /** @endcond */
MLSTATUS ML_getProjectionInfo(
    GeometryKernelObj geomKernelObj,
    ProjectionDataObj projectionDataObj,
    MLVector3D xyz,
    MLVector2D UV,
    char *entityNameBuf, MLINT entityNameBufLen,
    MLREAL *distance,
    MLREAL *tolerance
);